--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.0.0-alpha.13",
+    "react-dom": "16.0.0-alpha.13",
     "react-scripts": "1.0.10"
   },
   "scripts": {
